--- a/index.html
+++ b/index.html
@@ -10,67 +10,68 @@
     <title>Sooraj</title>
 </head>
 <body>
-    <div class="c1">
-        <div class="head">
-            <h1>Contact Details</h1>
+    <div class="cont">
+        <div class="c1">
+            <div class="head">
+                <h1>Contact Details</h1>
+            </div>
+            <div class="body">
+                <h2>📞91-9061261185</h2>
+                <h2>📧sooraj.20in@gmail.com</h2>
+                <h2>🗺️Pathanamthitta,kerela</h2>
+            </div>
+            <div class="head">
+                <h1>Technical Details</h1>
+            </div>
+            <div class="body">
+                <ul>
+                    <li>Web Development</li>
+                    <li>HTML,Javascript,CSS</li>
+                    <li>Python</li>
+                </ul>
+            </div>
+            <div class="head">
+                <h1>About Self</h1>
+            </div>
+            <div class="body">
+                <h2>Gender:Male</h2>
+                <h2>Date of Birth:18-11-04</h2>
+                <h2>Social Handle:<a href="https://www.linkedin.com/in/sooraj-renjith-03b302216/">Linkedin</a></h2>
+            </div>
         </div>
-        <div class="body">
-            <h2>📞91-9061261185</h2>
-            <h2>📧sooraj.2050in@gmail.com</h2>
-            <h2>🗺️Pathanamthitta,kerela</h2>
+        <div class="c2">
+            <div class="head">
+                <h1>Education</h1>
+            </div>
+            <div class="body">
+                <h2>Amal Jyothi college</h2>
+                <h2>Plus Two-Placid Vidya Vihar</h2>
+                <h2>Tenth-Indian School Sohar</h2>
+            </div>
+            <div class="head">
+                <h1>Certification</h1>
+            </div>
+            <div class="body">
+                <h2>Introduction to Frontend</h2>
+            </div>
+            <div class="head">
+                <h1>Soft Skills</h1>
+            </div>
+            <div class="body">
+                <h2>Creativity</h2>
+                <h2>Perseverance</h2>
+                <h2>Speaking</h2>
+                <h2>Adaptability</h2>
+            </div>
         </div>
-        <div class="head">
-            <h1>Technical Details</h1>
-        </div>
-        <div class="body">
-            <ul>
-                <li>Web Development</li>
-                <li>HTML,Javascript,CSS</li>
-                <li>Python</li>
-            </ul>
-        </div>
-        <div class="head">
-            <h1>About Self</h1>
-        </div>
-        <div class="body">
-            <h2>Gender:Male</h2>
-            <h2>Date of Birth:18-11-04</h2>
-            <h2>Social Handle:<a href="https://www.linkedin.com/in/sooraj-renjith-03b302216/">Linkedin</a></h2>
+        <div class="c3">
+            <img src="self.jpg">
+            <div class="name">
+                <h1 >Sooraj</h1>
+                <h1>Renjith</h1>
+                <h3>Frontend Developer</h3>
+            </div>
         </div>
     </div>
-    <div class="c2">
-        <div class="head">
-            <h1>Education</h1>
-        </div>
-        <div class="body">
-            <h2>Amal Jyothi college of engineering</h2>
-            <h2>Plus Two-Placid Vidya Vihar</h2>
-            <h2>Tenth-Indian School Sohar</h2>
-        </div>
-        <div class="head">
-            <h1>Certification</h1>
-        </div>
-        <div class="body">
-            <h2>Introduction to Frontend</h2>
-        </div>
-        <div class="head">
-            <h1>Soft Skills</h1>
-        </div>
-        <div class="body">
-            <h2>Creativity</h2>
-            <h2>Perseverance</h2>
-            <h2>Speaking</h2>
-            <h2>Adaptability</h2>
-        </div>
-    </div>
-    <div class="c3">
-        <img src="self.jpg">
-        <div class="name">
-            <h1 style="margin-right: 90px;">Sooraj</h1>
-            <h1>Renjith</h1>
-            <h3>Frontend Developer</h3>
-        </div>
-    </div>
-
 </body>
 </html>
